# sort-dli

./: LICENSE  README.md  sort-dli.cabal
reverse/: Reverse.hs
src/: Main.hs
