name:                sort-dli
version:             0.1.0.0
synopsis:            Sorts downloaded images according to the order they appear
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Robin Green
maintainer:          greenrd@greenrd.org
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable sort-dli
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , conduit >= 1.2.6.4 && <1.3
                     , conduit-combinators >= 1.0.3.1 && <1.1
                     , directory >= 1.2.2.0 && <1.3
                     , filepath >= 1.4.0.0 && <1.5
                     , html-conduit >= 1.2.1 && <1.3
                     , http-conduit >= 2.1.10 && <2.2
                     , network-uri >= 2.6.1.0 && <2.7
                     , text >= 1.2.2.0 && <1.3
                     , transformers >= 0.4.2.0 && <0.5
                     , xml-types >= 0.3.6 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010

executable sort-dli-reverse
  main-is:             Reverse.hs
  hs-source-dirs:      reverse
  build-depends:       base >=4.8 && <4.9
                     , conduit >= 1.2.6.4 && <1.3
                     , conduit-combinators >= 1.0.3.1 && <1.1
                     , text >= 1.2.2.0 && <1.3
  default-language:    Haskell2010
